deploy/kubernetes/deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: challenge-devops
  namespace: challenge-devops

spec:
  replicas: 2

  selector:
    matchLabels:
      app: challenge-devops

  template:

    metadata:
      labels:
        app: challenge-devops

    spec:
      containers:

        - name: challenge-devops

          image: challenge-devops:latest

          imagePullPolicy: Never

          ports:
            - containerPort: 8000

          readinessProbe:
            httpGet:
              path: /health
              port: 8000

            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8000

            initialDelaySeconds: 10
            periodSeconds: 15
