deploy/kubernetes/service.yaml
apiVersion: v1

kind: Service

metadata:
  name: challenge-devops-service
  namespace: challenge-devops

spec:

  selector:
    app: challenge-devops

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

  type: NodePort
